# rough

./: .gitignore  20191209_1221.py  20191212_1229.py  20191217_1548.bat  20191217_1844.txt  20191218_2325.hs  20191219_1029.py  20191219_1101.py  20200109_1016.py  20200111_0015.hs  README.md  a-d-f.hs  bteq-counter.py  chrome.bat  curl.py  doublecut.hs  getlowbit.c  gram.py  jisa.py  mecab.py  prime.py  reverse.c  strend.c  watch_room.py
hs/Translate/: LICENSE  Translate.cabal  dat  lib.py
hs/Translate/app/: Main.hs
hs/Translate/src/: Lib.hs
hs/Translate/test/: Spec.hs
pyaudio/: QuizSoundJudge.py  Test.py
